@@ -1,9 +1,4 @@
 
 
-//eoin todo
-right so , can you do analytics & make nice and delete
-
-/barry todo
-upload and validation and error messages forgot password . Update
-//add lables on reg and forgot pw. Change username to email or vice versa
-// add fxn that will take users name and lname and email and make all small characters
+//DO footer so that
+"" Put student number, name, surname of the members of the group as well as the group name in the footer of your web-site, so it is clearly visible in the browser."
