@@ -55,3 +55,4 @@ to include a password instead.
 27/12/15 2:05 **MADE EMAIL AN UNIQUE KEY IN DB*
 27/12/15 2:35, Progress on validation. Register user will have a message saying if they were succesfully added and if not, Told they have already registered.
 30/12/15 2:57 forgot pw working + email validation
+9/1/15 :5:04 file upload working, All okay.
